--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,8 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: row; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+label {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  /* background: #333; */
+}
+/* .userId {
+  display: flex;
+  flex-direction: column;
+  background: lightblue;
+  width: 20%;
+} */
